* performance refactoring